--- a/app/locales/en.yml
+++ b/app/locales/en.yml
@@ -3,3 +3,11 @@ cancel: Cancel
 saved: Saved
 deleted: Deleted
 empty: List is empty
+new: New
+edit: Edit
+delete: Delete
+really_delete: Really delete
+delete_title: Delete
+back_to_list: Back to list
+item:
+  name: Item
